# specinfra

./: Cargo.toml
src/: error.rs  lib.rs
src/backend/: command.rs  direct.rs  error.rs  mod.rs  ssh.rs
src/platform/: base_platform.rs  error.rs  mod.rs  platform.rs  platforms.rs
src/platform/bsd/: darwin.rs  mod.rs
src/platform/linux/: mod.rs  redhat.rs  ubuntu.rs
src/provider/: error.rs  mod.rs
src/provider/file/: mod.rs
src/provider/file/inline/: mod.rs  null.rs  posix.rs
src/provider/file/shell/: bsd.rs  linux.rs  mod.rs  null.rs  unix.rs
src/provider/package/: mod.rs
src/provider/package/inline/: mod.rs  null.rs
src/provider/package/shell/: apt.rs  mod.rs  null.rs  yum.rs
src/provider/port/: mod.rs
src/provider/port/inline/: mod.rs
src/provider/port/shell/: mod.rs  netstat.rs
src/provider/service/: error.rs  mod.rs
src/provider/service/inline/: mod.rs  null.rs  systemd.rs
src/provider/service/shell/: mod.rs  null.rs  systemd.rs  sysvinit.rs  ubuntu_init.rs
src/resource/: file.rs  mod.rs  package.rs  port.rs  service.rs
tests/: file.rs  package.rs  port.rs  service.rs  ssh.rs
